--- a/src/components/PatientLayout/Patient.module.css
+++ b/src/components/PatientLayout/Patient.module.css
@@ -3,7 +3,7 @@
   flex-direction: column;
 }
 .patientTable > table {
-  width: 98%;
+  width: 97%;
   min-width: auto;
   margin-left: 1rem;
   margin-top: 5px;
@@ -13,8 +13,7 @@
   color: rgb(255, 255, 255);
   padding: 0.6rem 1rem;
   font-size: 0.9rem;
-
-  border: 1px solid #282b2f;
+  border: 2px solid #22252a;
   border-collapse: collapse;
   height: 3rem;
   text-wrap: nowrap;
@@ -24,7 +23,7 @@
   color: rgb(110, 110, 110);
   font-size: 0.9rem;
   padding: 0.6rem 1rem;
-  border: 1px solid #282b2f;
+  border: 2px solid #22252a;
   border-collapse: collapse;
   height: 3rem;
   text-wrap: nowrap;
